--- a/src/components/layout/footer/footer.component.html
+++ b/src/components/layout/footer/footer.component.html
@@ -5,10 +5,10 @@
       <div class="row">
         <div class="col-12">
           <div class="footer-header-img">
-            <img src="../../../assets/images/logo2.png" alt="" />
+            <img src="../../../assets/images/logo.png" alt="" />
           </div>
         </div>
-        <div class="col-lg-5 col-sm-12">
+        <div class="col-lg-5 col-sm-12 m-sm-auto">
           <div class="footer-icons">
             <ul>
               <li class="mt-4">
@@ -158,7 +158,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-lg-2 col-sm-6">
+        <div class="col-lg-2 col-sm-6 m-sm-auto">
           <div class="footer-list">
             <ul class="text-white">
               <li>
@@ -179,7 +179,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-lg-5 col-sm-6">
+        <div class="col-lg-5 col-sm-6 m-sm-auto">
           <div class="ps">
             <ul>
               <li class="mb-5">
@@ -189,8 +189,8 @@
             <div class="input">
               <p>Get Our Lastest News</p>
               <input
+                class="form-control"
                 placeholder="example@gmail.com"
-                style="margin: auto"
                 type="text"
                 name=""
                 id=""
