--- a/src/components/layout/header/header.component.html
+++ b/src/components/layout/header/header.component.html
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-5 ms-auto">
-        <img src="../../../assets/images/logo2.png" alt="" />
+        <img src="../../../assets/images/logo.png" alt="" />
       </div>
       <div class="col-7 m-auto">
         <div class="content">
