--- a/src/components/services/about-services-box/about-services-box.component.scss
+++ b/src/components/services/about-services-box/about-services-box.component.scss
@@ -1,22 +1,24 @@
 @import "../../../app/styles/base/colors";
 .box-header {
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 0px 5px;
   background-color: transparent;
+  cursor: pointer;
+
   .box-img {
+    width: 100%;
+    overflow: hidden;
     img {
       width: 100%;
+      transition: 0.7s all;
     }
   }
   .box-content {
-    padding: 0 0.7rem;
-    padding: 1rem 0;
-    max-width: 600px;
-
+    padding: 0.8rem 1.5rem 1rem 1.5rem;
     h2 {
       font-size: 1.5rem !important;
       color: $blue-medium-1;
       font-weight: 400;
-      margin-top: 0.6rem;
+      padding-top: 0.4rem;
     }
     p {
       font-size: 1rem !important;
@@ -24,10 +26,20 @@
     }
     li {
       a {
-        font-size: 1.1rem;
+        font-size: 1rem;
         border-bottom: 1px solid $blue-medium-1;
         color: $blue-medium-1;
       }
     }
+  }
+}
+.box-header:hover {
+  img {
+    transform: scale(1.2);
+    transition: 0.7s all;
+  }
+  .box-content {
+    background-color: #f1f4f7 !important;
+    transition: 0.7s all;
   }
 }
