finish about us

--- a/src/components/layout/footer/footer.component.html
+++ b/src/components/layout/footer/footer.component.html
@@ -168,7 +168,7 @@
                 <a>Portfolio</a>
               </li>
               <li>
-                <a>{{ footer.tab3_name }}</a>
+                <a routerLink="services">{{ footer.tab3_name }}</a>
               </li>
               <li>
                 <a>FAQ</a>
