--- a/src/app/styles/base/font-size.scss
+++ b/src/app/styles/base/font-size.scss
@@ -2,12 +2,12 @@
 @import "colors";
 h2 {
   font-size: 2.5rem !important; // 20px
-  font-weight: 700;
-  color: $blue-medium-2;
+  color: $blue-medium-2 !important;
 }
 
 p {
   font-size: 1.125rem; // 18px
+  line-height: 1.9rem;
 }
 span {
   font-size: 0.875rem; // 14px
