--- a/src/app/styles/layout.scss
+++ b/src/app/styles/layout.scss
@@ -41,6 +41,14 @@ html {
     font-size: 16px;
   }
 }
+.overlay {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 1;
+}
 
 /* Body Styles Start Here */
 body {
@@ -50,74 +58,54 @@ body {
     margin: 3rem 0;
     font-size: 1.25rem;
   }
-  &.rtl {
-    direction: rtl;
-    text-align: right;
+  // &.rtl {
+  //   direction: rtl;
+  //   text-align: right;
+  // }
+}
+.background-img {
+  background-image: url("../../assets/images/pattern.png");
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  bottom: 0%;
+  left: 0;
+  @media screen and (max-width: 576px) {
+    display: none;
   }
 }
-
+.container-fluid {
+  padding: 0 !important;
+  margin: 0 !important;
+}
 /* App Layout Container Styles Start Here */
 .tahalof-container {
   max-width: 85%;
   margin: 0 auto;
   padding: 1.5rem 0;
 }
-/* App Main Layout Styles Start Here */
-.layout {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  position: relative;
-  // background-color: $layout;
-  main {
-    max-width: 100%;
-    min-height: 100%;
-    margin-top: -1px;
-    flex: 1 0 auto;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    section {
-      min-height: 100%;
-      display: flex;
-      flex-direction: column;
-      flex: 1 0 auto;
-      overflow: hidden;
-      position: relative;
-      .tahalof-page {
-        min-width: 100%;
-        max-width: min-content;
-        flex: 1 0 auto;
-        min-height: calc(100vh - 5rem);
-        //padding: 6rem 1.25rem 2rem;
-      }
-    }
-  }
-}
 
-// /* Scrollbar Styles Start Here */
-// /* width */
-// ::-webkit-scrollbar {
-//   width: 5px;
-//   height: 5px;
-// }
-// /* Track */
-// ::-webkit-scrollbar-track {
-//   border-radius: 2px;
-//   background: $white;
-// }
-// /* Handle */
-// ::-webkit-scrollbar-thumb {
-//   border-radius: 3px;
-//   background: $mainColor;
-// }
-// /* Handle on hover */
-// ::-webkit-scrollbar-thumb:hover {
-//   background: $blue-medium-2;
-// }
-// /* width */
-// ::-webkit-scrollbar {
-//   width: 5px;
-// }
+/* Scrollbar Styles Start Here */
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 2px;
+  background: $white;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  border-radius: 3px;
+  background: $mainColor;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $blue-medium-2;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
