--- a/src/components/layout/footer/footer.component.scss
+++ b/src/components/layout/footer/footer.component.scss
@@ -17,6 +17,7 @@
       li {
         margin-bottom: 1.5rem;
       }
+
       svg {
         margin-right: 0.5rem;
       }
@@ -34,6 +35,10 @@
     }
     li {
       margin: 1rem 0;
+    }
+    a {
+      cursor: pointer;
+      color: $white !important;
     }
   }
   .input {
