--- a/src/components/services/services.component.html
+++ b/src/components/services/services.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-12">
       <div class="services-content">
-        <h2>{{ services.main_title }}</h2>
+        <h2 class="mt-5">{{ services.main_title }}</h2>
         <p>{{ services.main_description }}</p>
       </div>
     </div>
