--- a/src/components/services/services.component.scss
+++ b/src/components/services/services.component.scss
@@ -1,13 +1,9 @@
-@import "../../app/styles/base/colors";
-@import "../../app/styles/base/font-size.scss";
-@import "../../app/styles/base/mixins";
-@import "../../app/styles/layout.scss";
 .services-header {
   margin-bottom: 1.5rem;
   .services-content {
     p {
-      max-width: 640px;
-      margin: 1rem 0;
+      max-width: 800px;
+      margin: 0 0;
     }
   }
 }
