--- a/src/components/shared/button/button.component.scss
+++ b/src/components/shared/button/button.component.scss
@@ -1,8 +1,9 @@
 @import "../../../app/styles/base/colors";
 button {
-  padding: 0.5rem 1.2rem;
-  color: $blue-medium-2;
-  background-color: $white;
+  background-color: $blue-medium-2 !important;
+  color: $white !important;
+  padding: 0.8rem 4rem;
   cursor: pointer;
   border: none;
+  font-weight: 600;
 }
