hospitals is done

--- a/src/components/layout/header/header.component.html
+++ b/src/components/layout/header/header.component.html
@@ -22,7 +22,7 @@
                 >
               </li>
               <li>
-                <a routerLink="facilities" [routerLinkActive]="'activete'"
+                <a routerLink="hospitals" [routerLinkActive]="'activete'"
                   >Our Facilities</a
                 >
               </li>
