--- a/src/app/components/news/news.component.scss
+++ b/src/app/components/news/news.component.scss
@@ -1,49 +1,53 @@
 @import "../../styles/base/colors";
-.news-content-img {
-  width: 100%;
-  height: 100%;
-
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px;
-  .news-img {
-    width: 100% !important;
-    height: 100%;
-    img {
-      width: 100% !important;
-      object-fit: cover;
-      height: 100%;
-    }
-  }
-  .news-content {
-    padding: 1rem 1rem 1rem 3rem;
+.header {
+  width: 90%;
+  margin: auto;
+  .news-content-img {
     width: 100%;
-    position: relative;
-    overflow: hidden;
-    transition: 0.8s all;
-    h2 {
-      color: $gray !important;
-      font-size: 1rem !important;
+    height: 100%;
+
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+      rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    .news-img {
+      width: 100% !important;
+      height: 100%;
+      img {
+        width: 100% !important;
+        object-fit: cover;
+        height: 100%;
+      }
     }
-    h3 {
-      margin-bottom: 2rem !important;
-      font-weight: 500;
+    .news-content {
+      padding: 1rem 1rem 1rem 3rem;
+      width: 100%;
+      position: relative;
+      overflow: hidden;
+      transition: 0.8s all;
+      h2 {
+        color: $gray !important;
+        font-size: 1rem !important;
+      }
+      h3 {
+        margin-bottom: 2rem !important;
+        font-weight: 500;
+      }
+      p {
+        font-weight: 300;
+      }
     }
-    p {
-      font-weight: 300;
+    .hover {
+      background-color: rgba(165, 163, 163, 0.3);
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      top: 100%;
+      opacity: 0;
+    }
+    .news-content:hover .hover {
+      opacity: 1;
+      top: 0;
+      transition: 0.8s all;
     }
   }
-}
-.hover {
-  background-color: rgba(165, 163, 163, 0.3);
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 100%;
-  opacity: 0;
-}
-.news-content:hover .hover {
-  opacity: 1;
-  top: 0;
-  transition: 0.8s all;
 }
