--- a/src/app/components/services/services-details/services-details.component.html
+++ b/src/app/components/services/services-details/services-details.component.html
@@ -1,5 +1,5 @@
 @if (servicesDetails$ | async ; as servicesDetails) {
-<div class="services-detais-header position-relative" setRtl>
+<div class="services-detais-header position-relative">
   <div class="background-img"></div>
 
   <div #image class="services-detais-img position-relative">
