--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -1,5 +1,5 @@
 @if (services$ | async ; as services) {
-<div class="tahalof-container mt-5 services-header" setRtl>
+<div class="tahalof-container mt-5 services-header">
   <div class="row">
     <div class="col-12">
       <div class="services-content">
