--- a/src/app/components/layout/footer/footer.component.scss
+++ b/src/app/components/layout/footer/footer.component.scss
@@ -7,9 +7,18 @@
     margin: auto;
   }
   &-img {
+    width: 100%;
+    @media (max-width: 992px) {
+      text-align: center;
+    }
+
     img {
-      width: 15.5%;
+      width: 20%;
       margin: 2.5rem 0;
+      @media (max-width: 992px) {
+        width: 50%;
+        margin: auto;
+      }
     }
   }
   .footer-icons {
