--- a/src/app/components/news/news.component.scss
+++ b/src/app/components/news/news.component.scss
@@ -5,7 +5,7 @@
   .news-content-img {
     width: 100%;
     height: 100%;
-
+    cursor: auto;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
       rgba(0, 0, 0, 0.22) 0px 10px 10px;
     .news-img {
@@ -23,6 +23,7 @@
       position: relative;
       overflow: hidden;
       transition: 0.8s all;
+      z-index: 2;
       h2 {
         color: $gray !important;
         font-size: 1rem !important;
@@ -36,18 +37,20 @@
       }
     }
     .hover {
-      background-color: rgba(165, 163, 163, 0.3);
+      background-color: rgba($blue-medium-2, $alpha: 0.1);
       width: 100%;
       height: 100%;
       position: absolute;
       left: 0;
       top: 100%;
       opacity: 0;
-    }
-    .news-content:hover .hover {
-      opacity: 1;
-      top: 0;
+      z-index: -1;
       transition: 0.8s all;
     }
+  }
+  .news-content-img:hover .hover {
+    opacity: 1;
+    top: 0;
+    transition: 0.8s all;
   }
 }
