--- a/src/app/components/shared/button/button.component.scss
+++ b/src/app/components/shared/button/button.component.scss
@@ -1,9 +1,10 @@
 @import "../../../../app/styles/base/colors";
 button {
-  background-color: $blue-medium-2 !important;
-  color: $white !important;
+  background-color: #034773 !important;
+  color: #ffffff !important;
   padding: 0.8rem 4rem;
   cursor: pointer;
   border: none;
-  font-weight: 600;
+  font-weight: 500;
+  letter-spacing: 0.1rem;
 }
