--- a/src/app/components/careers/careers-details/careers-details.component.html
+++ b/src/app/components/careers/careers-details/careers-details.component.html
@@ -1,1 +1,94 @@
-<p>careers-details works!</p>
+@if (careersDetails$ | async ; as careersDetails) {
+<div class="tahalof-container">
+  <div class="row">
+    <div class="careersdetails-content">
+      <div class="col-xl-7 col-xxl-6">
+        <h2>{{ careersDetails.job_title }} :</h2>
+        <p>{{ careersDetails.job_description }}</p>
+        @if (careersDetails.job_requirement.length) {
+        <h3>{{ careersDetails.job_requirement }}</h3>
+        }
+        <ul>
+          @for (re of careersDetails.job_requirement; track re) {
+          <li>{{ re.requirement }}</li>
+          }
+        </ul>
+      </div>
+    </div>
+  </div>
+  <form (ngSubmit)="onSubmit()" [formGroup]="careersForm">
+    <div class="careers-form">
+      <div class="row justify-content-center">
+        <div class="col-12">
+          <div class="form-content">
+            <h2>Fill your form now :</h2>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="form-input">
+            <label for="">Name</label>
+            <input formControlName="name" type="text" />
+          </div>
+          <div class="form-input">
+            <label for="">Phone</label>
+            <input formControlName="phone" type="text" />
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="form-input">
+            <label for="">E-Mail</label>
+            <input formControlName="email" type="text" />
+          </div>
+          <div class="form-input">
+            <label for="">Country</label>
+            <input formControlName="country" type="text" />
+          </div>
+        </div>
+        <div class="col-12">
+          <label for="">Attach Files</label>
+          <div class="position-relative">
+            <input
+              [value]="resumePlaceHolder"
+              [placeholder]="resumePlaceHolder"
+              type="text"
+              formControlName="cv_name"
+            />
+            <svg
+              width="34px"
+              height="34px"
+              class="posee"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              stroke="#034773"
+            >
+              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+              <g
+                id="SVGRepo_tracerCarrier"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></g>
+              <g id="SVGRepo_iconCarrier">
+                <path
+                  d="M14.2647 15.9377L12.5473 14.2346C11.758 13.4519 11.3633 13.0605 10.9089 12.9137C10.5092 12.7845 10.079 12.7845 9.67922 12.9137C9.22485 13.0605 8.83017 13.4519 8.04082 14.2346L4.04193 18.2622M14.2647 15.9377L14.606 15.5991C15.412 14.7999 15.8149 14.4003 16.2773 14.2545C16.6839 14.1262 17.1208 14.1312 17.5244 14.2688C17.9832 14.4253 18.3769 14.834 19.1642 15.6515L20 16.5001M14.2647 15.9377L18.22 19.9628M18.22 19.9628C17.8703 20 17.4213 20 16.8 20H7.2C6.07989 20 5.51984 20 5.09202 19.782C4.7157 19.5903 4.40973 19.2843 4.21799 18.908C4.12583 18.7271 4.07264 18.5226 4.04193 18.2622M18.22 19.9628C18.5007 19.9329 18.7175 19.8791 18.908 19.782C19.2843 19.5903 19.5903 19.2843 19.782 18.908C20 18.4802 20 17.9201 20 16.8V13M11 4H7.2C6.07989 4 5.51984 4 5.09202 4.21799C4.7157 4.40973 4.40973 4.71569 4.21799 5.09202C4 5.51984 4 6.0799 4 7.2V16.8C4 17.4466 4 17.9066 4.04193 18.2622M18 9V6M18 6V3M18 6H21M18 6H15"
+                  stroke="#034773 \"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></path>
+              </g>
+            </svg>
+            <input
+              class="pose"
+              (change)="handleFileInput($event)"
+              formControlName="cv"
+              type="file"
+            />
+          </div>
+        </div>
+        <button class="mt-5">Apply</button>
+      </div>
+    </div>
+  </form>
+</div>
+}
