--- a/src/app/components/careers/careers-details/careers-details.component.html
+++ b/src/app/components/careers/careers-details/careers-details.component.html
@@ -24,7 +24,7 @@
             <h2>Fill your form now :</h2>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-lg-6 col-md-12">
           <div class="form-input">
             <label for="">Name</label>
             <input formControlName="name" type="text" />
@@ -34,7 +34,7 @@
             <input formControlName="phone" type="text" />
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-lg-6 col-md-12">
           <div class="form-input">
             <label for="">E-Mail</label>
             <input formControlName="email" type="text" />
@@ -46,7 +46,7 @@
         </div>
         <div class="col-12">
           <label for="">Attach Files</label>
-          <div class="position-relative">
+          <div class="position-relative sbg">
             <input
               [value]="resumePlaceHolder"
               [placeholder]="resumePlaceHolder"
