--- a/src/app/components/services/about-services-box/about-services-box.component.html
+++ b/src/app/components/services/about-services-box/about-services-box.component.html
@@ -8,7 +8,7 @@
       <p>{{ discription | subText }}</p>
       <ul>
         <li>
-          <a>Service Details</a>
+          <a>{{ "SERVICES.SERVICE_DETAILS" | translate }}</a>
         </li>
       </ul>
     </h4>
