--- a/src/app/components/layout/footer/footer.component.scss
+++ b/src/app/components/layout/footer/footer.component.scss
@@ -54,6 +54,8 @@
     input {
       padding: 0.9rem 14rem 0.9rem 5px;
       font-weight: 700;
+      width: 70%;
+      border-radius: unset !important;
     }
     @media (max-width: 400px) {
       padding: 0.9rem 2rem 0.9rem 5px;
@@ -62,13 +64,24 @@
 }
 .ps {
   position: relative;
-  transform: translate(-50%, -50%);
-  top: 30%;
-  left: 70%;
+  padding: 1.1rem 3rem;
+  left: 0rem;
+  top: -55px;
+  height: 100%;
   @media (max-width: 992px) {
     transform: translate(0, 0);
     top: 0;
     left: 0;
     width: 100%;
+  }
+  ::ng-deep button {
+    position: relative;
+    padding: 1.1rem 3rem;
+    left: 0rem;
+    top: -55px;
+    height: 100%;
+    @media screen and (max-width: 1200px) {
+      left: 40%;
+    }
   }
 }
