--- a/src/app/components/our-company/our-history/our-history.component.scss
+++ b/src/app/components/our-company/our-history/our-history.component.scss
@@ -23,7 +23,6 @@
   border: 1px solid #92b1c2;
   margin-top: 2rem;
   margin-bottom: 2rem;
-  height: 30vh;
   align-items: center;
   display: flex;
   justify-content: space-between;
@@ -31,6 +30,8 @@
     margin-inline-end: 3rem;
     width: 100%;
     height: 100%;
+  }
+  @media screen and (max-width: 768px) {
   }
   p {
     margin-inline-start: 3rem;
