--- a/src/app/components/our-company/our-values/our-values.component.scss
+++ b/src/app/components/our-company/our-values/our-values.component.scss
@@ -12,9 +12,12 @@
     margin-top: 3rem;
     padding: 1rem;
     box-shadow: 0 3px 20px #03668c1a;
-    height: 40vh;
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 990px) {
       height: 30vh;
+      padding: 0;
+    }
+    @media screen and (max-width: 768px) {
+      height: 25vh;
       padding: 0;
     }
     h2 {
