--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -189,7 +189,7 @@
             <div class="input">
               <p>{{ "FOOTER.NEWSLATTER" | translate }}</p>
               <input
-                class="form-control"
+                class=""
                 placeholder="example@gmail.com"
                 type="text"
                 name=""
@@ -205,4 +205,6 @@
     </div>
   </div>
 </div>
+} @else {
+<app-loader></app-loader>
 }
