--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -1,3 +1,4 @@
+@if (header$ | async ; as header) {
 <div class="navbar-header">
   <div class="container-fluid">
     <div class="row">
@@ -49,3 +50,7 @@
     </div>
   </div>
 </div>
+
+} @else {
+<app-loader></app-loader>
+}
