--- a/src/app/components/news/news.component.scss
+++ b/src/app/components/news/news.component.scss
@@ -1,7 +1,7 @@
 @import "../../styles/base/colors";
 .header {
   width: 90%;
-  margin: 4rem auto;
+  margin: 1rem auto 4rem auto;
   .news-content-img {
     width: 100%;
     height: 100%;
