--- a/src/app/components/our-company/our-values/our-values.component.scss
+++ b/src/app/components/our-company/our-values/our-values.component.scss
@@ -12,6 +12,7 @@
     margin-top: 3rem;
     padding: 1rem;
     box-shadow: 0 3px 20px #03668c1a;
+    height: 45vh;
     @media screen and (max-width: 990px) {
       height: 30vh;
       padding: 0;
