--- a/src/app/components/layout/loader/loader.component.html
+++ b/src/app/components/layout/loader/loader.component.html
@@ -1,7 +1,7 @@
 <div class="loader-container">
   <div class="loader">
     <div class="inner-circle">
-      <img src="../../../../assets/images/logo.png" alt="" />
+      <img src="../../../../assets/images/fav.png" alt="" />
     </div>
   </div>
 </div>
