--- a/src/app/components/home/home-header/home-header.component.scss
+++ b/src/app/components/home/home-header/home-header.component.scss
@@ -22,12 +22,28 @@
     position: absolute;
     z-index: 5;
     top: 50%;
-    left: 5%;
+    left: 12%;
+    transform: translateY(-50%);
   }
   h2 {
-    font-size: 1.5rem !important;
-    max-width: 400px !important;
+    font-size: 2.3rem !important;
+    max-width: 600px !important;
     font-weight: 800;
-    line-height: 1.7rem !important;
+    line-height: 2.7rem !important;
+  }
+  p {
+    font-size: 1rem !important;
+    max-width: 500px;
+    line-height: 1.4rem;
+    font-weight: 400;
+  }
+  ::ng-deep {
+    .overlay {
+      background-color: rgba($white, 0.6);
+    }
+    button {
+      margin-top: 1rem;
+      padding: 0.5rem 8rem !important;
+    }
   }
 }
