--- a/src/app/components/news/news.component.scss
+++ b/src/app/components/news/news.component.scss
@@ -24,6 +24,9 @@
       overflow: hidden;
       transition: 0.8s all;
       z-index: 2;
+      @media screen and (max-width: 450px) {
+        padding: 0rem 0rem 0rem 1rem;
+      }
       h2 {
         color: $gray !important;
         font-size: 1rem !important;
