--- a/src/app/components/our-company/our-history/our-history.component.scss
+++ b/src/app/components/our-company/our-history/our-history.component.scss
@@ -122,4 +122,7 @@
   .mat-mdc-tab-labels {
     height: 25vh;
   }
+  .mat-mdc-tab-header-pagination-chevron {
+    border-color: black !important;
+  }
 }
