--- a/src/app/components/our-company/our-values/our-values.component.scss
+++ b/src/app/components/our-company/our-values/our-values.component.scss
@@ -14,11 +14,11 @@
     box-shadow: 0 3px 20px #03668c1a;
     height: 45vh;
     @media screen and (max-width: 990px) {
-      height: 30vh;
+      height: 26vh;
       padding: 0;
     }
     @media screen and (max-width: 768px) {
-      height: 25vh;
+      height: 23vh;
       padding: 0;
     }
     h2 {
@@ -37,6 +37,9 @@
       max-width: 320px;
       margin: auto;
       margin-top: 2rem;
+      @media screen and (max-width: 450px) {
+        margin: 0rem auto 0 1rem;
+      }
     }
   }
 }
